Fix for BUG#2757 "--read-only gives weird error on update". It is not fixable in 4.0 because it requires modifying the sql/share/*/errmsg.txt files. So it is fixed in 4.1 like this: the ER_SKIP_GRANT_TABLES is replaced by a more generic ER_OPTION_PREVENTS_STATEMENT which can be used both for "can't do this because of --skip-grant-tables" and "can't do this because of --read-only" (for this we don't use ER_CANT_UPDATE_WITH_READLOCK anymore). So now the message for --read-only is: "The MySQL server is running with the --read-only option so cannot execute this statement".